# pixelsmith

./: README.md  pyproject.toml
.github/workflows/: project-tracker.yml
pixelsmith/: __init__.py  _config.py  _palettes.py  _pipeline.py  _postprocess.py  exceptions.py
pixelsmith/mcp/: server.py
tests/: conftest.py
tests/integration/: test_generate.py  test_mcp.py
tests/unit/: test_config.py  test_palettes.py  test_postprocess.py
